--- a/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Juego.razor
@@ -2242,7 +2242,7 @@
                                                  </div>
                                              </a>
                                         }
-                                        else if (enlace.Contains("https://www.facebook.com/") == true)
+                                        else if (enlace.Contains("https://www.facebook.com/") == true || enlace.Contains("https://facebook.com/") == true)
                                         {
                                              <a href="@enlace" target="_blank" class="boton-pequeño" title="Facebook" style="width: fit-content; padding: 10px;">
                                                  <div style="width: 30px; height: 30px; padding: 2px;">
@@ -2258,7 +2258,7 @@
                                                  </div>
                                              </a>
                                         }
-                                        else if (enlace.Contains("https://www.youtube.com/") == true)
+                                        else if (enlace.Contains("https://www.youtube.com/") == true || enlace.Contains("https://youtube.com/") == true)
                                         {
                                              <a href="@enlace" target="_blank" class="boton-pequeño" title="YouTube" style="width: fit-content; padding: 10px;">
                                                  <div style="width: 30px; height: 30px; padding: 2px;">
