--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
@@ -561,14 +561,14 @@ else if (noticiaTipoSeleccionada == NoticiaTipo.Suscripciones.ToString())
                     BaseDatos.Errores.Insertar.Mensaje("Enviar Telegram Noticia", ex);
                 }
 
-                try
-                {
-                    Herramientas.RedesSociales.Reddit.Postear(noticiaAñadir);
-                }
-                catch (Exception ex)
-                {
-                    BaseDatos.Errores.Insertar.Mensaje("Enviar Reddit Noticia", ex);
-                }
+                // try
+                // {
+                //     Herramientas.RedesSociales.Reddit.Postear(noticiaAñadir);
+                // }
+                // catch (Exception ex)
+                // {
+                //     BaseDatos.Errores.Insertar.Mensaje("Enviar Reddit Noticia", ex);
+                // }
 
                 try
                 {
